# dp-few-shot-generation

./: .gitignore  Makefile  NOTICE.txt  README.md  SUPPORT.md  pyproject.toml  run.sh
data/: process_movie.py
lmapi/: README.md  poetry.toml  pyproject.toml
lmapi/src/lmapi/: auth.py  http_settings.py  lm.py  openai.py  openai_auth.py
lmapi/src/lmapi/async_tools/: asyncitertools.py  limits.py  server_sent_events.py
lmapi/tests/test_lmapi/: test_import.py
lmapi/tests/test_lmapi/async_tools/: test_asyncitertools.py
privacy_analysis/: exponential.py  subgaussian.py
src/dp_few_shot_generation/: lm.py  prob_utils.py  run_exp_agnews.py  run_exp_dbpedia.py  run_exp_movie.py  run_exp_trec.py
tests/test_dp_few_shot_generation/: test_import.py
