[tool.poetry]
name = "dp-few-shot-generation"
version = "0.1.0"
description = "Differentially private few-shot generation using in-context learning with LLMs."
authors = [
    # See paper for full list of authors
    "Xinyu Tang <xinyut@princeton.edu>",
    "Richard Shin <richard.shin@microsoft.com>",
    "Huseyin A. Inan <huseyin.inan@microsoft.com>"
]
readme = "README.md"
packages = [
    { include = "dp_few_shot_generation", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = "^2.11.0"
autodp = "^0.2"
lmapi = {path = "./lmapi", develop = true}
more-itertools = "^9.1.0"
scipy = "^1.10.1"
typer = "^0.9.0"
numpy = "^1.25.2"
openai = "^0.28.0"
pandas = "^2.1.0"
prv-accountant = "^0.2.0"
aiohttp = "^3.9.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pyright = "^1.1.303"
pytest = "^7.3.1"
ruff = "^0.0.261"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
ipykernel = "^6.23.1"

[tool.black]
skip-magic-trailing-comma = true
target-version = ["py310"]

[tool.pyright]
include = [
  "src",
  "tests",
]
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.ruff]
# See hhttps://beta.ruff.rs/docs/rules/ for a list of rules.
# This list is kept in the same order as the documentation.
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "RUF",
]
ignore = [
  # Do not perform function call in argument defaults	
  "B008",
  # Line too long
  "E501",
]
target-version = "py310"
src = [
  "src",
  "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
